# videoprocessing

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-build.sh  docker-run.sh  frameprocessing.cpp  frameprocessing.h  main.cpp  show.cpp  show.h  staticUtils.h  videoprocessing.cpp  videoprocessing.h
.devcontainer/: devcontainer.json
include/: colortracking.hpp  depthimage.hpp  frameprocessing.h  frameprocessing.hpp  objecttracking.hpp  opencvslider.hpp  show.h  show.hpp  staticUtils.h  staticUtils.hpp  target.h  target.hpp  videoprocessing.h  videoprocessing.hpp
src/: colortracking.cpp  depthimage.cpp  frameprocessing.cpp  main.cpp  objecttracking.cpp  opencvslider.cpp  show.cpp  target.cpp  videoprocessing.cpp
